--- a/package.json
+++ b/package.json
@@ -24,13 +24,18 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/graphql": "^9.1.2",
     "@nestjs/mongoose": "^9.0.2",
     "@nestjs/platform-express": "^8.0.0",
+    "apollo-server-express": "^3.6.2",
+    "class-validator": "^0.13.2",
     "dotenv": "^14.2.0",
+    "graphql": "^15.8.0",
     "mongoose": "^6.1.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
