--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-validator": "^0.13.2",
     "dotenv": "^14.2.0",
     "graphql": "^15.8.0",
+    "joi": "^17.5.0",
     "mongoose": "^6.1.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
