--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
     "class-validator": "^0.13.2",
     "dotenv": "^14.2.0",
     "graphql": "^15.8.0",
+    "helmet": "^5.0.2",
     "joi": "^17.5.0",
     "mongoose": "^6.1.7",
+    "morgan": "^1.10.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "serve-favicon": "^2.5.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
