--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^9.1.2",
+    "@nestjs/jwt": "^8.0.0",
     "@nestjs/mongoose": "^9.0.2",
+    "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "apollo-server-express": "^3.6.2",
     "bcrypt": "^5.0.1",
@@ -37,6 +39,8 @@
     "joi": "^17.5.0",
     "mongoose": "^6.1.7",
     "morgan": "^1.10.0",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -52,6 +56,7 @@
     "@types/jest": "27.0.2",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.0.0",
+    "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
