--- a/env/example.env
+++ b/env/example.env
@@ -4,6 +4,8 @@
 # APP_PORT=<3001 by defualt>
 # DATABASE_HOST=<db host>
 # DATABASE_COLLECTION=<db collection>
+# JWT_SECRET_KEY=<your secret key>
+# JWT_EXPIRES_TIME=<int>
 
 
 # development.evn
