test: unit tests on config service

--- a/env/example.env
+++ b/env/example.env
@@ -1,6 +1,6 @@
 # .env 
 # --------------
-# NODE_ENV=<development or production>
+# NODE_ENV=<development or production or test for unit test>
 # APP_PORT=<3001 by defualt>
 # DATABASE_HOST=<db host>
 # DATABASE_COLLECTION=<db collection>
