--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/apollo": "^10.1.4",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.0.0",
-    "@nestjs/graphql": "^9.1.2",
+    "@nestjs/graphql": "^10.1.5",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/mongoose": "^9.0.2",
     "@nestjs/passport": "^8.2.1",
@@ -36,6 +37,7 @@
     "dotenv": "^14.2.0",
     "graphql": "^15.8.0",
     "helmet": "^5.0.2",
+    "install": "^0.13.0",
     "joi": "^17.5.0",
     "mongoose": "^6.1.7",
     "morgan": "^1.10.0",
