feat: allow origin can be set up from env

--- a/env/example.env
+++ b/env/example.env
@@ -13,3 +13,4 @@
 # --------------
 # DATABASE_USER=<db user>
 # DATABASE_PWD=<db pwd>
+# ALLOW_ORIGIN=<"https://example1.com,https://example2.com">
