chore: add comment

--- a/env/example.env
+++ b/env/example.env
@@ -8,8 +8,8 @@
 # JWT_EXPIRES_TIME=<int>
 
 
-# development.evn
-# porudction.env 
+# development.env
+# proudction.env 
 # --------------
 # DATABASE_USER=<db user>
 # DATABASE_PWD=<db pwd>
